WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192191
Fix _WKWebsiteDataStoreConfiguration. sourceApplicationBundleIdentifier and sourceApplicationSecondaryIdentifier SPI introduced in
r235127
https://bugs.webkit.org/show_bug.cgi?id=192191
Summary
Fix _WKWebsiteDataStoreConfiguration. sourceApplicationBundleIdentifier and s...
Alex Christensen
Reported
2018-11-29 15:17:31 PST
Fix _WKWebsiteDataStoreConfiguration. sourceApplicationBundleIdentifier and sourceApplicationSecondaryIdentifier SPI introduced in
r235127
Attachments
Patch
(1.65 KB, patch)
2018-11-29 15:18 PST
,
Alex Christensen
aestes
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2018-11-29 15:18:06 PST
Created
attachment 356072
[details]
Patch
Alex Christensen
Comment 2
2018-12-03 13:54:22 PST
https://trac.webkit.org/changeset/238702/webkit
Radar WebKit Bug Importer
Comment 3
2018-12-03 13:55:52 PST
<
rdar://problem/46430672
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug