Fix _WKWebsiteDataStoreConfiguration. sourceApplicationBundleIdentifier and sourceApplicationSecondaryIdentifier SPI introduced in r235127 https://bugs.webkit.org/show_bug.cgi?id=192191

Reviewed by Andy Estes.

* NetworkProcess/cocoa/NetworkSessionCocoa.mm:
(WebKit::NetworkSessionCocoa::NetworkSessionCocoa):
When trying to adopt the new SPI and verify it worked, I found that the strings are not copied in one place where they should be.



Canonical link: https://commits.webkit.org/206852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238702 268f45cc-cd09-0410-ab3c-d52691b4dbfc